--- a/apps/kream-scraper/package.json
+++ b/apps/kream-scraper/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
+    "@nestjs/schedule": "^4.0.2",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
