--- a/apps/kream-scraper/package.json
+++ b/apps/kream-scraper/package.json
@@ -12,6 +12,9 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "pm2:start": "pm2 start dist/main.js --name kream-scraper",
+    "pm2:stop": "pm2 stop kream-scraper",
+    "db:migration": "npx prisma migrate dev",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -23,6 +26,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "5.15.1",
     "cheerio": "^1.0.0-rc.12",
     "puppeteer": "^22.11.2",
     "reflect-metadata": "^0.2.0",
