--- a/apps/kream-scraper/package.json
+++ b/apps/kream-scraper/package.json
@@ -29,6 +29,8 @@
     "@prisma/client": "5.15.1",
     "cheerio": "^1.0.0-rc.12",
     "puppeteer": "^22.11.2",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
