리눅스운영체제 동작 테스트 24

--- a/apps/kream-scraper/package.json
+++ b/apps/kream-scraper/package.json
@@ -12,6 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "xvfb": "xvfb-run ndoe dist/main.js",
     "pm2:start": "pm2 start dist/main.js --name kream-scraper",
     "pm2:stop": "pm2 stop kream-scraper",
     "db:migration": "npx prisma migrate dev",
