--- a/apps/kream-scraper/package.json
+++ b/apps/kream-scraper/package.json
@@ -12,7 +12,7 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "xvfb": "xvfb-run ndoe dist/main.js",
+    "xvfb": "xvfb-run node dist/main.js",
     "pm2:start": "pm2 start dist/main.js --name kream-scraper",
     "pm2:stop": "pm2 stop kream-scraper",
     "db:migration": "npx prisma migrate dev",
