--- a/apps/kream-scraper/package.json
+++ b/apps/kream-scraper/package.json
@@ -9,12 +9,14 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "pm2:start": "pm2 start dist/main.js --name kream-scraper",
-    "pm2:stop": "pm2 stop kream-scraper",
-    "db:migration": "npx prisma migrate dev",
+    "start:dev": "dotenv -e .env.development nest start --watch",
+    "start:debug": "dotenv -e .env.development nest start --debug --watch",
+    "dev:pm2:start": "pm2 start ecosystem.config.js --env development",
+    "dev:pm2:stop": "pm2 stop ecosystem.config.js --env development",
+    "prod:pm2:start": "pm2 start ecosystem.config.js --env production",
+    "prod:pm2:stop": "pm2 stop ecosystem.config.js --env production",
+    "db:migrate:dev": "dotenv -e .env.development --  npx prisma migrate dev",
+    "db:migrate:prod": "dotenv -e .env.production --  npx prisma migrate dev",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -24,6 +26,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "5.15.1",
