--- a/apps/scrap-api/package.json
+++ b/apps/scrap-api/package.json
@@ -9,9 +9,17 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:dev": "dotenv -e .env.development nest start --watch",
+    "start:prod": "dotenv -e .env.production nest start --watch",
+    "start:debug": "dotenv -e .env.development nest start --debug --watch",
+    "dev:pm2:start": "pm2 start ecosystem.config.js --env development",
+    "dev:pm2:stop": "pm2 stop ecosystem.config.js --env development",
+    "prod:pm2:start": "pm2 start ecosystem.config.js --env production",
+    "prod:pm2:stop": "pm2 stop ecosystem.config.js --env production",
+    "db:migrate:dev": "dotenv -e .env.development --  npx prisma migrate dev",
+    "db:migrate:prod": "dotenv -e .env.production --  npx prisma migrate dev",
+    "db:pull:dev": "dotenv -e .env.development --  npx prisma migrate dev",
+    "db:pull:prod": "dotenv -e .env.production --  npx prisma migrate dev",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -21,8 +29,11 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "dayjs": "^1.11.11",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
