--- a/apps/kream-scraper/package.json
+++ b/apps/kream-scraper/package.json
@@ -17,7 +17,9 @@
     "prod:pm2:start": "pm2 start ecosystem.config.js --env production",
     "prod:pm2:stop": "pm2 stop ecosystem.config.js --env production",
     "db:migrate:dev": "dotenv -e .env.development --  npx prisma migrate dev",
-    "db:migrate:prod": "dotenv -e .env.production --  npx prisma migrate dev",
+    "db:migrate:prod": "dotenv -e .env.production --  npx prisma migrate deploy",
+    "db:pull:dev": "dotenv -e .env.development --  npx prisma db pull dev",
+    "db:pull:prod": "dotenv -e .env.production --  npx prisma db pull prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
