--- a/apps/scrap-api/package.json
+++ b/apps/scrap-api/package.json
@@ -16,10 +16,7 @@
     "dev:pm2:stop": "pm2 stop ecosystem.config.js --env development",
     "prod:pm2:start": "pm2 start ecosystem.config.js --env production",
     "prod:pm2:stop": "pm2 stop ecosystem.config.js --env production",
-    "db:migrate:dev": "dotenv -e .env.development --  npx prisma migrate dev",
-    "db:migrate:prod": "dotenv -e .env.production --  npx prisma migrate deploy",
-    "db:pull:dev": "dotenv -e .env.development --  npx prisma migrate dev",
-    "db:pull:prod": "dotenv -e .env.production --  npx prisma migrate dev",
+    "db:pull": "dotenv -e .env.production --  npx prisma db pull",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
