--- a/apps/kream-scrap-api/package.json
+++ b/apps/kream-scrap-api/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "compression": "^1.7.4",
     "dayjs": "^1.11.11",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
