--- a/apps/kream-scrapbook/package.json
+++ b/apps/kream-scrapbook/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -27,6 +26,7 @@
     "framer-motion": "^11.2.11",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
+    "rc-slider": "^10.6.2",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
