--- a/apps/kream-scrapbook/package.json
+++ b/apps/kream-scrapbook/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.11",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.396.0",
     "next": "14.2.4",
     "rc-slider": "^10.6.2",
