--- a/apps/kream-scrap-api/package.json
+++ b/apps/kream-scrap-api/package.json
@@ -12,10 +12,8 @@
     "start:dev": "dotenv -e .env.development nest start --watch",
     "start:prod": "dotenv -e .env.production nest start --watch",
     "start:debug": "dotenv -e .env.development nest start --debug --watch",
-    "dev:pm2:start": "pm2 start ecosystem.config.js --env development",
-    "dev:pm2:stop": "pm2 stop ecosystem.config.js --env development",
-    "prod:pm2:start": "pm2 start ecosystem.config.js --env production",
-    "prod:pm2:stop": "pm2 stop ecosystem.config.js --env production",
+    "prod:pm2:start": "pm2 start ecosystem.config.js",
+    "prod:pm2:stop": "pm2 stop ecosystem.config.js",
     "db:pull": "dotenv -e .env.production --  npx prisma db pull",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
