--- a/apps/kream-scrapbook/package.json
+++ b/apps/kream-scrapbook/package.json
@@ -6,6 +6,8 @@
     "dev": "next dev -p 3002",
     "build": "next build",
     "start": "next start",
+    "prod:pm2:start": "pm2 start ecosystem.config.js",
+    "prod:pm2:stop": "pm2 stop ecosystem.config.js",
     "lint": "next lint"
   },
   "dependencies": {
