--- a/apps/kream-scrap-api/package.json
+++ b/apps/kream-scrap-api/package.json
@@ -14,6 +14,7 @@
     "start:debug": "dotenv -e .env.development nest start --debug --watch",
     "prod:pm2:start": "pm2 start ecosystem.config.js",
     "prod:pm2:stop": "pm2 stop ecosystem.config.js",
+    "prod:deploy": "yarn build && yarn prod:pm2:stop && yarn prod:pm2:start",
     "db:pull": "dotenv -e .env.production --  npx prisma db pull",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
