--- a/apps/kream-scrapbook/package.json
+++ b/apps/kream-scrapbook/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "prod:pm2:start": "pm2 start ecosystem.config.js",
     "prod:pm2:stop": "pm2 stop ecosystem.config.js",
+    "prod:deploy": "yarn build && yarn prod:pm2:stop && yarn prod:pm2:start",
     "lint": "next lint"
   },
   "dependencies": {
