--- a/apps/kream-scrapbook/package.json
+++ b/apps/kream-scrapbook/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^18",
     "react-spring": "^9.7.3",
     "react-toastify": "^10.0.5",
+    "react-tooltip": "^5.27.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1"
